--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td width="65%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
             <p>Hi, my name is Shuaiqi Wang. 
-              I am now a second year Ph.D. student in the <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering Department</a> 
+              I am now a fourth year Ph.D. student in the <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering Department</a> 
               at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. 
               I am fortunate to be advised by <a href="https://www.andrew.cmu.edu/user/gfanti/">Giulia Fanti</a>.
 
@@ -105,7 +105,7 @@
               <heading>Research Interests</heading>
               <p>
                 I am interested in the theoretical foundations of machine learning, 
-                and the applications in privacy, security, federated learning and data sharing.
+                and the applications in privacy, security, data sharing and federated learning.
               <!--
               :</p>
               <ul>
@@ -169,14 +169,40 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. "Distributional Privacy for Data Sharing".
-              <strong>NeurIPS 2022 SyntheticData4ML</strong>.<br>
+              <strong>Shuaiqi Wang</strong>, Shuran Zheng, Zinan Lin, Giulia Fanti and Zhiwei Steven Wu. 
+              "<a href="https://arxiv.org/pdf/2410.17095">Inferentially-Private Private Information</a>".
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong>, Zinan Lin and Giulia Fanti. 
+              "<a href="https://arxiv.org/pdf/2411.18531">Statistic Maximal Leakage</a>".
+              <strong>ISIT 2024</strong>.
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong>, Rongzhe Wei, Mohsen Ghassemi, Eleonora Kreacic and Vamsi K. Potluru. 
+              "<a href="https://arxiv.org/pdf/2405.13804">Guarding Multiple Secrets: Enhanced Summary Statistic Privacy for Data Sharing</a>".
+              <strong>ICLR 2024 PML Workshop</strong>.
+            </p>
+            <p>
+              Xinyi Xu, <strong>Shuaiqi Wang</strong>, Chuan-Sheng Foo, Bryan Kian Hsiang Low and Giulia Fanti.. 
+              "<a href="https://arxiv.org/pdf/2410.04386">Data Distribution Valuation</a>".
+              <strong>NeurIPS 2024</strong>.
+            </p>
+            <p>
+              Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. 
+              "<a href="https://arxiv.org/pdf/2303.02014"></a>Summary Statistic Privacy in Data Sharing</a>".
+              <strong>IEEE Journal on Selected Areas in Information Theory, NeurIPS 2022 SyntheticData4ML</strong>.<br>
               * Equal contribution.
+            </p>
+            <p>
+              Ronghao Ni, Zinan Lin, <strong>Shuaiqi Wang</strong> and Giulia Fanti. 
+              "<a href="https://arxiv.org/pdf/2312.06786">Mixture-of-Linear-Experts for Long-term Time Series Forecasting</a>".
+              <strong>AISTATS 2024</strong>.
             </p>
             <p>
                 <strong>Shuaiqi Wang</strong>, Jonathan Hayase, Giulia Fanti and Sewoong Oh. 
                 "<a href="https://arxiv.org/abs/2205.11736">Towards a Defense against Backdoor Attacks in Continual Federated Learning</a>". 
                 [<a href="https://github.com/wsqwsq/Towards-a-Defense-against-Backdoor-Attacks-in-Continual-Federated-Learning">code</a>]
+                <strong>Transactions on Machine Learning Research</strong>.
             </p>
             <!--<p>
               <strong>Shuaiqi Wang</strong> and Giulia Fanti. "Group Testing with Inexact Reconstruction".
