--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
           <td width="100%" valign="middle">
             <heading>Publications and Manuscripts</heading>
             <p>
-<<<<<<< HEAD
               <strong>Shuaiqi Wang</strong>, Shuran Zheng, Zinan Lin, Giulia Fanti and Zhiwei Steven Wu. 
               "<a href="https://arxiv.org/pdf/2410.17095">Inferentially-Private Private Information</a>".
             </p>
@@ -184,34 +183,20 @@
               <strong>ICLR 2024 PML Workshop</strong>.
             </p>
             <p>
-              Xinyi Xu, <strong>Shuaiqi Wang</strong>, Chuan-Sheng Foo, Bryan Kian Hsiang Low and Giulia Fanti.. 
+              Xinyi Xu, <strong>Shuaiqi Wang</strong>, Chuan-Sheng Foo, Bryan Kian Hsiang Low and Giulia Fanti. 
               "<a href="https://arxiv.org/pdf/2410.04386">Data Distribution Valuation</a>".
               <strong>NeurIPS 2024</strong>.
-=======
-              <strong>Shuaiqi Wang</strong>, Zinan Lin and Giulia Fanti. 
-              "Statistic Maximal Leakage".
-              <strong>ISIT 2024</strong>.
-            </p>
-            <p>
-              <strong>Shuaiqi Wang</strong>, Rongzhe Wei, Mohsen Ghassemi, Eleonora Kreačić and Vamsi K. Potluru. 
-              "<a href="https://arxiv.org/pdf/2405.13804">Guarding Multiple Secrets: Enhanced Summary Statistic Privacy for Data Sharing</a>".
             </p>
             <p>
               Ronghao Ni, Zinan Lin, <strong>Shuaiqi Wang</strong> and Giulia Fanti. 
               "<a href="https://arxiv.org/pdf/2312.06786">Mixture-of-Linear-Experts for Long-term Time Series Forecasting</a>".
               <strong>AISTATS 2024</strong>.
->>>>>>> 4a6ee958a7206d46b2d0d46d0da8fd0c7cc931eb
             </p>
             <p>
               Zinan Lin*, <strong>Shuaiqi Wang</strong>*, Vyas Sekar, and Giulia Fanti. 
-              "<a href="https://arxiv.org/pdf/2303.02014"></a>Summary Statistic Privacy in Data Sharing</a>".
+              "<a href="https://arxiv.org/pdf/2303.02014">Summary Statistic Privacy in Data Sharing</a>".
               <strong>IEEE Journal on Selected Areas in Information Theory, NeurIPS 2022 SyntheticData4ML</strong>.<br>
               * Equal contribution.
-            </p>
-            <p>
-              Ronghao Ni, Zinan Lin, <strong>Shuaiqi Wang</strong> and Giulia Fanti. 
-              "<a href="https://arxiv.org/pdf/2312.06786">Mixture-of-Linear-Experts for Long-term Time Series Forecasting</a>".
-              <strong>AISTATS 2024</strong>.
             </p>
             <p>
                 <strong>Shuaiqi Wang</strong>, Jonathan Hayase, Giulia Fanti and Sewoong Oh. 
