--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             <td width="100%" valign="middle">
               <heading>Research Interests</heading>
               <p>
-                I am interested in the theoretical foundations of machine learning, 
-                and the applications in privacy, security, data sharing and federated learning.
+                I am interested in the theoretical foundations of machine learning (especially generative models), 
+                and the applications in privacy, security, large language models, data sharing, and federated learning.
               <!--
               :</p>
               <ul>
@@ -147,6 +147,36 @@
         </tr>
         </tbody></table>
 
+        <!-- Education -->
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tbody><tr>
+            <td width="100%" valign="middle">
+              <heading>Industrial Experiences</heading>
+              <!--<p>
+                <strong>Rice University</strong>, USA, from Aug. 2018 until now.<br>
+                Department of Computer Science
+              </p>-->
+              <p>
+                <font size="2">Microsoft, Research Intern, Sep. 2024 - Dec. 2024</font><br>
+                Topic: differentially private data synthesis for structured datasets based on large language models<br>
+                Host: Zinan Lin, Pei Zhou
+              </p>
+              <p>
+                <font size="2">Amazon, Research Intern, Jun. 2024 - Aug. 2024</font><br>
+                Topic: adversarial attack on vision language models<br>
+                Host: Alireza Mehrtash
+                <!--Major GAP: 92.1/100 (3.93/4.0)-->
+              </p>
+              <p>
+                <font size="2">JPMorgan Chase, AI Research Intern, Jun. 2023 - Aug. 2023</font><br>
+                Topic: privacy protection across multiple summary statistical properties<br>
+                Host: Mohsen Ghassemi
+                <!--Major GAP: 92.1/100 (3.93/4.0)-->
+              </p>
+            </td>
+          </tr>
+          </tbody></table>
+
         <!-- Publication -->
         <!--
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
@@ -171,6 +201,12 @@
             <p>
               <strong>Shuaiqi Wang</strong>, Shuran Zheng, Zinan Lin, Giulia Fanti and Zhiwei Steven Wu. 
               "<a href="https://arxiv.org/pdf/2410.17095">Inferentially-Private Private Information</a>".
+              <strong>WWW 2025</strong>.
+            </p>
+            <p>
+              <strong>Shuaiqi Wang</strong>, Sayali Deshpande, Rajesh Kudupudi, Alireza Mehrtash and Danial Sabri Dashti.
+              "MASAN: Enhancing Attack Stealth and Efficacy on Vision-Language Models via Smart Noise".
+              <strong>ICLR 2025 BuildingTrust</strong>.
             </p>
             <p>
               <strong>Shuaiqi Wang</strong>, Zinan Lin and Giulia Fanti. 
