--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
                 Department of Computer Science
               </p>-->
               <p>
-                <font size="2">Microsoft, Research Intern, Sep. 2024 - Dec. 2024</font><br>
+                <font size="2"><i>Microsoft</i>, Research Intern, Sep. 2024 - Dec. 2024</font><br>
                 Topic: differentially private data synthesis for structured datasets based on large language models<br>
                 Host: Zinan Lin, Pei Zhou
               </p>
               <p>
-                <font size="2">Amazon, Research Intern, Jun. 2024 - Aug. 2024</font><br>
+                <font size="2"><i>Amazon</i>, Research Intern, Jun. 2024 - Aug. 2024</font><br>
                 Topic: adversarial attack on vision language models<br>
                 Host: Alireza Mehrtash
                 <!--Major GAP: 92.1/100 (3.93/4.0)-->
               </p>
               <p>
-                <font size="2">JPMorgan Chase, AI Research Intern, Jun. 2023 - Aug. 2023</font><br>
+                <font size="2"><i>JPMorgan Chase</i>, AI Research Intern, Jun. 2023 - Aug. 2023</font><br>
                 Topic: privacy protection across multiple summary statistical properties<br>
                 Host: Mohsen Ghassemi
                 <!--Major GAP: 92.1/100 (3.93/4.0)-->
