--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <td width="65%" valign="middle">
             <p align="center"><name>Shuaiqi Wang</name></p>
             <p>Hi, my name is Shuaiqi Wang. 
-              I am now a fourth year Ph.D. student in the <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering Department</a> 
+              I am now a fifth year Ph.D. student in the <a href="https://www.ece.cmu.edu/">Electrical and Computer Engineering Department</a> 
               at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. 
               I am fortunate to be advised by <a href="https://www.andrew.cmu.edu/user/gfanti/">Giulia Fanti</a>.
 
