--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
               <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Sayali Deshpande, Rajesh Kudupudi, Alireza Mehrtash, and Danial Sabri Dashti. [<a href="https://wsqwsq.github.io/" target="_blank" rel="noopener">ICLR 2025, BuildingTrust</a>]</div>
             </li>
             <li>
+              <h3>Linear Combination of Saved Checkpoints Makes Consistency and Diffusion Models Better</h3>
+              <div class="pub-authors">Enshu Liu, Junyi Zhu, Zinan Lin, Xuefei Ning, <strong><em>Shuaiqi Wang</em></strong>, Matthew B. Blaschko, Sergey Yekhanin, Shengen Yan, Guohao Dai, Huazhong Yang, and Yu Wang. [<a href="https://arxiv.org/pdf/2404.02241" target="_blank" rel="noopener">ICLR 2025</a>]</div>
+            </li>
+            <li>
               <h3>Statistic Maximal Leakage</h3>
               <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Zinan Lin, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2411.18531" target="_blank" rel="noopener">ISIT 2024</a>]</div>
             </li>
