--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <ul class="clean">
             <li>
               <h3>Struct‑Bench: A Benchmark for Differentially Private Structured Text Generation</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://wsqwsq.github.io/" target="_blank" rel="noopener">arXiv</a>] [<a href="https://github.com/struct-bench/structpe" target="_blank" rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/" target="_blank" rel="noopener">Leaderboard</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://arxiv.org/abs/2509.10696" target="_blank" rel="noopener">arXiv</a>] [<a href="https://github.com/struct-bench/structpe" target="_blank" rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/" target="_blank" rel="noopener">Leaderboard</a>]</div>
             </li>
             <li>
               <h3>Evaluating Selective Encryption Against Gradient Inversion Attacks</h3>
