--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="brand">Shuaiqi Wang</div>
         <nav aria-label="Sections">
           <a href="#publications">Publications</a>
-          <a href="./source/CV.pdf" target="_blank" rel="noopener">CV</a>
+          <a href="./source/CV.pdf"  rel="noopener">CV</a>
         </nav>
       </div>
     </header>
@@ -116,12 +116,12 @@
           <li class="iconitem">
             <!-- Github (black mark) -->
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="#111" d="M12 .5C5.648.5.5 5.648.5 12c0 5.088 3.292 9.395 7.868 10.916.575.106.785-.25.785-.556 0-.275-.01-1.005-.016-1.974-3.2.695-3.876-1.542-3.876-1.542-.523-1.33-1.279-1.684-1.279-1.684-1.045-.715.08-.7.08-.7 1.154.081 1.762 1.186 1.762 1.186 1.028 1.762 2.698 1.253 3.356.958.104-.745.402-1.253.73-1.542-2.555-.29-5.243-1.278-5.243-5.686 0-1.255.45-2.28 1.186-3.084-.119-.29-.514-1.456.112-3.035 0 0 .965-.309 3.166 1.178a10.95 10.95 0 0 1 2.884-.389c.98.004 1.966.133 2.884.389 2.2-1.487 3.163-1.178 3.163-1.178.63 1.579.235 2.745.116 3.035.74.804 1.186 1.83 1.186 3.084 0 4.42-2.694 5.392-5.255 5.676.41.353.78 1.047.78 2.112 0 1.525-.014 2.754-.014 3.13 0 .309.206.667.79.553C20.215 21.39 23.5 17.088 23.5 12 23.5 5.648 18.352.5 12 .5Z"/></svg>
-            <a href="https://github.com/wsqwsq" target="_blank" rel="noopener">Github</a>
+            <a href="https://github.com/wsqwsq"  rel="noopener">Github</a>
           </li>
           <li class="iconitem">
             <!-- Google Scholar (graduation cap) -->
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="#111" d="M12 3 1 9l11 6 9-4.91V17h2V9L12 3Zm0 13L5 12.18V14l7 4 7-4v-1.82L12 16Z"/></svg>
-            <a href="https://scholar.google.com/citations?user=yy2OXxEAAAAJ&hl=en&oi=ao" target="_blank" rel="noopener">Google Scholar</a>
+            <a href="https://scholar.google.com/citations?user=yy2OXxEAAAAJ&hl=en&oi=ao"  rel="noopener">Google Scholar</a>
           </li>
         </ul>
       </aside>
@@ -130,7 +130,7 @@
       <main>
         <!-- Introduction & Interests BEFORE Education -->
         <section id="intro" class="section">
-          <p>I am a fifth-year Ph.D. candidate in ECE at <a href="https://www.cmu.edu/" target="_blank" rel="noopener">Carnegie Mellon University</a>, advised by <a href="https://www.andrew.cmu.edu/user/gfanti/" target="_blank" rel="noopener">Giulia Fanti</a>. I work on the theoretical foundations of machine learning and its applications to privacy, security, large language models, data synthesis, and federated learning.</p>
+          <p>I am a fifth-year Ph.D. candidate in ECE at <a href="https://www.cmu.edu/"  rel="noopener">Carnegie Mellon University</a>, advised by <a href="https://www.andrew.cmu.edu/user/gfanti/"  rel="noopener">Giulia Fanti</a>. I work on the theoretical foundations of machine learning and its applications to privacy, security, large language models, data synthesis, and federated learning.</p>
           <h2>Research Interests</h2>
           <p>ML Privacy &amp; Security · Large Language Model on Structured Data · Generative Models · Data Synthesis &amp; Sharing · Federated Learning</p>
         </section>
@@ -141,7 +141,7 @@
         <section id="education" class="section">
           <h2>Education</h2>
           <ul class="clean">
-            <li><strong>Carnegie Mellon University</strong> — Ph.D., Electrical &amp; Computer Engineering (2021 – present). Advisor: <a href="https://www.andrew.cmu.edu/user/gfanti/" target="_blank" rel="noopener">Giulia Fanti</a>.</li>
+            <li><strong>Carnegie Mellon University</strong> — Ph.D., Electrical &amp; Computer Engineering (2021 – present). Advisor: <a href="https://www.andrew.cmu.edu/user/gfanti/"  rel="noopener">Giulia Fanti</a>.</li>
             <li><strong>Shanghai Jiao Tong University</strong> — B.S., Computer Science &amp; Zhiyuan Honors Program (2016 – 2020)</li>
           </ul>
         </section>
@@ -185,63 +185,63 @@
           <ul class="clean">
             <li>
               <h3>Struct‑Bench: A Benchmark for Differentially Private Structured Text Generation</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://arxiv.org/abs/2509.10696" target="_blank" rel="noopener">arXiv</a>] [<a href="https://github.com/struct-bench/structpe" target="_blank" rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/" target="_blank" rel="noopener">Leaderboard</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://arxiv.org/abs/2509.10696"  rel="noopener">arXiv</a>] [<a href="https://github.com/struct-bench/structpe"  rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/"  rel="noopener">Leaderboard</a>]</div>
             </li>
             <li>
               <h3>Evaluating Selective Encryption Against Gradient Inversion Attacks</h3>
-              <div class="pub-authors">Jiajun Gu, Yuhang Yao, <strong><em>Shuaiqi Wang</em></strong>, and Carlee Joe‑Wong. [<a href="https://arxiv.org/abs/2508.04155" target="_blank" rel="noopener">arXiv</a>]</div>
+              <div class="pub-authors">Jiajun Gu, Yuhang Yao, <strong><em>Shuaiqi Wang</em></strong>, and Carlee Joe‑Wong. [<a href="https://arxiv.org/abs/2508.04155"  rel="noopener">arXiv</a>]</div>
             </li>
             <li>
               <h3>Inferentially‑Private Private Information</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Shuran Zheng, Zinan Lin, Giulia Fanti, and Zhiwei Steven Wu. [<a href="https://arxiv.org/pdf/2410.17095" target="_blank" rel="noopener">WWW 2025</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Shuran Zheng, Zinan Lin, Giulia Fanti, and Zhiwei Steven Wu. [<a href="https://arxiv.org/pdf/2410.17095"  rel="noopener">WWW 2025</a>]</div>
             </li>
             <li>
               <h3>MASAN: Enhancing Attack Stealth and Efficacy on Vision‑Language Models via Smart Noise</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Sayali Deshpande, Rajesh Kudupudi, Alireza Mehrtash, and Danial Sabri Dashti. [<a href="https://wsqwsq.github.io/" target="_blank" rel="noopener">ICLR 2025, BuildingTrust</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Sayali Deshpande, Rajesh Kudupudi, Alireza Mehrtash, and Danial Sabri Dashti. [<a href="https://wsqwsq.github.io/"  rel="noopener">ICLR 2025, BuildingTrust</a>]</div>
             </li>
             <li>
               <h3>Linear Combination of Saved Checkpoints Makes Consistency and Diffusion Models Better</h3>
-              <div class="pub-authors">Enshu Liu, Junyi Zhu, Zinan Lin, Xuefei Ning, <strong><em>Shuaiqi Wang</em></strong>, Matthew B. Blaschko, Sergey Yekhanin, Shengen Yan, Guohao Dai, Huazhong Yang, and Yu Wang. [<a href="https://arxiv.org/pdf/2404.02241" target="_blank" rel="noopener">ICLR 2025</a>]</div>
+              <div class="pub-authors">Enshu Liu, Junyi Zhu, Zinan Lin, Xuefei Ning, <strong><em>Shuaiqi Wang</em></strong>, Matthew B. Blaschko, Sergey Yekhanin, Shengen Yan, Guohao Dai, Huazhong Yang, and Yu Wang. [<a href="https://arxiv.org/pdf/2404.02241"  rel="noopener">ICLR 2025</a>]</div>
             </li>
             <li>
               <h3>Statistic Maximal Leakage</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Zinan Lin, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2411.18531" target="_blank" rel="noopener">ISIT 2024</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Zinan Lin, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2411.18531"  rel="noopener">ISIT 2024</a>]</div>
             </li>
             <li>
               <h3>Guarding Multiple Secrets: Enhanced Summary Statistic Privacy for Data Sharing</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Rongzhe Wei, Mohsen Ghassemi, Eleonora Kreacic, and Vamsi K. Potluru. [<a href="https://arxiv.org/pdf/2405.13804" target="_blank" rel="noopener">ICLR 2024, PML</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Rongzhe Wei, Mohsen Ghassemi, Eleonora Kreacic, and Vamsi K. Potluru. [<a href="https://arxiv.org/pdf/2405.13804"  rel="noopener">ICLR 2024, PML</a>]</div>
             </li>
             <li>
               <h3>Data Distribution Valuation</h3>
-              <div class="pub-authors">Xinyi Xu, <strong><em>Shuaiqi Wang</em></strong>, Chuan‑Sheng Foo, Bryan Kian Hsiang Low, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2410.04386" target="_blank" rel="noopener">NeurIPS 2024</a>]</div>
+              <div class="pub-authors">Xinyi Xu, <strong><em>Shuaiqi Wang</em></strong>, Chuan‑Sheng Foo, Bryan Kian Hsiang Low, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2410.04386"  rel="noopener">NeurIPS 2024</a>]</div>
             </li>
             <li>
               <h3>Mixture‑of‑Linear‑Experts for Long‑term Time Series Forecasting</h3>
-              <div class="pub-authors">Ronghao Ni, Zinan Lin, <strong><em>Shuaiqi Wang</em></strong>, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2312.06786" target="_blank" rel="noopener">AISTATS 2024</a>]</div>
+              <div class="pub-authors">Ronghao Ni, Zinan Lin, <strong><em>Shuaiqi Wang</em></strong>, and Giulia Fanti. [<a href="https://arxiv.org/pdf/2312.06786"  rel="noopener">AISTATS 2024</a>]</div>
             </li>
             <li>
               <h3>Summary Statistic Privacy in Data Sharing</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>* , Zinan Lin*, Vyas Sekar, and Giulia Fanti. <em>*Equal contribution.</em> [<a href="https://arxiv.org/pdf/2303.02014" target="_blank" rel="noopener">JSAIT / NeurIPS 2022, S4ML</a>] [<a href="https://github.com/fjxmlzn/summary_statistic_privacy" target="_blank" rel="noopener">Code</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>* , Zinan Lin*, Vyas Sekar, and Giulia Fanti. <em>*Equal contribution.</em> [<a href="https://arxiv.org/pdf/2303.02014"  rel="noopener">JSAIT / NeurIPS 2022, S4ML</a>] [<a href="https://github.com/fjxmlzn/summary_statistic_privacy"  rel="noopener">Code</a>]</div>
             </li>
             <li>
               <h3>Towards a Defense against Backdoor Attacks in Continual Federated Learning</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Jonathan Hayase, Giulia Fanti, and Sewoong Oh. [<a href="https://arxiv.org/abs/2205.11736" target="_blank" rel="noopener">TMLR</a>] [<a href="https://github.com/wsqwsq/Towards-a-Defense-against-Backdoor-Attacks-in-Continual-Federated-Learning" target="_blank" rel="noopener">Code</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Jonathan Hayase, Giulia Fanti, and Sewoong Oh. [<a href="https://arxiv.org/abs/2205.11736"  rel="noopener">TMLR</a>] [<a href="https://github.com/wsqwsq/Towards-a-Defense-against-Backdoor-Attacks-in-Continual-Federated-Learning"  rel="noopener">Code</a>]</div>
             </li>
             <li>
               <h3>Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Shuhao Li, Luoyi Fu, and Xiaojun Lin. [<a href="./source/Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links.pdf" target="_blank" rel="noopener">PDF</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Shuhao Li, Luoyi Fu, and Xiaojun Lin. [<a href="./source/Efficient Distributed Steiner Tree Construction in Wireless Sensor Networks with Unreliable Links.pdf"  rel="noopener">PDF</a>]</div>
             </li>
             <li>
               <h3>De‑anonymizability of Social Network: Through the Lens of Symmetry</h3>
-              <div class="pub-authors">Benjie Miao, <strong><em>Shuaiqi Wang</em></strong>, Luoyi Fu, and Xiaojun Lin. [<a href="https://dl.acm.org/doi/pdf/10.1145/3397166.3409127" target="_blank" rel="noopener">MobiHoc 2020</a>]</div>
+              <div class="pub-authors">Benjie Miao, <strong><em>Shuaiqi Wang</em></strong>, Luoyi Fu, and Xiaojun Lin. [<a href="https://dl.acm.org/doi/pdf/10.1145/3397166.3409127"  rel="noopener">MobiHoc 2020</a>]</div>
             </li>
             <li>
               <h3>De‑anonymizing Social Networks with Overlapping Community Structure</h3>
-              <div class="pub-authors">Luoyi Fu, Jiapeng Zhang, <strong><em>Shuaiqi Wang</em></strong>, Xinyu Wu, Xinbing Wang, and Guihai Chen. [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8967164" target="_blank" rel="noopener">IEEE/ACM ToN</a>]</div>
+              <div class="pub-authors">Luoyi Fu, Jiapeng Zhang, <strong><em>Shuaiqi Wang</em></strong>, Xinyu Wu, Xinbing Wang, and Guihai Chen. [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8967164"  rel="noopener">IEEE/ACM ToN</a>]</div>
             </li>
             <li>
               <h3>Collective Influence Maximization in Mobile Social Networks</h3>
-              <div class="pub-authors">Xudong Wu, Luoyi Fu, <strong><em>Shuaiqi Wang</em></strong>, Bo Jiang, Xinbing Wang, and Guihai Chen. [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9465739" target="_blank" rel="noopener">IEEE TMC</a>]</div>
+              <div class="pub-authors">Xudong Wu, Luoyi Fu, <strong><em>Shuaiqi Wang</em></strong>, Bo Jiang, Xinbing Wang, and Guihai Chen. [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9465739"  rel="noopener">IEEE TMC</a>]</div>
             </li>
           </ul>
         </section>
