--- a/index.html
+++ b/index.html
@@ -185,11 +185,7 @@
           <ul class="clean">
             <li>
               <h3>Struct‑Bench: A Benchmark for Differentially Private Structured Text Generation</h3>
-              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://arxiv.org/abs/2509.10696"  rel="noopener">arXiv</a>] [<a href="https://github.com/struct-bench/structpe"  rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/"  rel="noopener">Leaderboard</a>]</div>
-            </li>
-            <li>
-              <h3>Evaluating Selective Encryption Against Gradient Inversion Attacks</h3>
-              <div class="pub-authors">Jiajun Gu, Yuhang Yao, <strong><em>Shuaiqi Wang</em></strong>, and Carlee Joe‑Wong. [<a href="https://arxiv.org/abs/2508.04155"  rel="noopener">arXiv</a>]</div>
+              <div class="pub-authors"><strong><em>Shuaiqi Wang</em></strong>, Vikas Raunak, Arturs Backurs, Victor Reis, Pei Zhou, Sihao Chen, Longqi Yang, Zinan Lin, Sergey Yekhanin, and Giulia Fanti. [<a href="https://arxiv.org/abs/2509.10696"  rel="noopener">NeurIPS 2025</a>] [<a href="https://github.com/struct-bench/structpe"  rel="noopener">Code</a>] [<a href="https://struct-bench.github.io/"  rel="noopener">Leaderboard</a>]</div>
             </li>
             <li>
               <h3>Inferentially‑Private Private Information</h3>
@@ -202,6 +198,10 @@
             <li>
               <h3>Linear Combination of Saved Checkpoints Makes Consistency and Diffusion Models Better</h3>
               <div class="pub-authors">Enshu Liu, Junyi Zhu, Zinan Lin, Xuefei Ning, <strong><em>Shuaiqi Wang</em></strong>, Matthew B. Blaschko, Sergey Yekhanin, Shengen Yan, Guohao Dai, Huazhong Yang, and Yu Wang. [<a href="https://arxiv.org/pdf/2404.02241"  rel="noopener">ICLR 2025</a>]</div>
+            </li>
+            <li>
+              <h3>Evaluating Selective Encryption Against Gradient Inversion Attacks</h3>
+              <div class="pub-authors">Jiajun Gu, Yuhang Yao, <strong><em>Shuaiqi Wang</em></strong>, and Carlee Joe‑Wong. [<a href="https://arxiv.org/abs/2508.04155"  rel="noopener">arXiv</a>]</div>
             </li>
             <li>
               <h3>Statistic Maximal Leakage</h3>
